still working on layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 body {
   font-size: 20px;
   font-family: monospace;
+  background:#ffffff url("/images/space-background-with-stars-vector-illustration_97886-319.jpg") repeat right top;
+  color: #fff;
 }
 
 div {
@@ -9,7 +11,7 @@ div {
 
 
 #movieLogo {
-  width: 600px;
+  width: 500px;
   margin: 0 auto;
 }
 
@@ -35,8 +37,16 @@ img.pic {
 }
 
 #thumbs {
-  border:2px solid red;
-  width: 1060px;
+  /* border:2px solid red; */
+  width: 1100px;
+}
+
+img.pic {
+  border:3px solid transparent;
+}
+
+img.pic:hover {
+  border:3px solid #fff;
 }
 
 #planet-facts {  
@@ -44,31 +54,48 @@ img.pic {
 }
 
 #image-caption {
-  border:2px solid orange;
+  /* border:2px solid orange; */
+  width: 600px;
 }
 
 #quotes {  
   width: 500px;
-  border: 2px solid pink;
+  /* border: 2px solid pink; */
   
 }
 
 #globe {
  border: 2px solid blue;
+ width: 800px;
+ margin-bottom: 0;
 }
 
 #globe img {
  width: 100px;
  height: 100px;
- float: left;
+}
+
+#globe .climate-population {
+  border:2px solid #fff;
+  font-size:22px;
+}
+
+#planet-name {
+  font-size:80px;
 }
 
 #globe ul {
-  margin-left: 100px;
+    color: rgb(255, 255, 255);
+    padding-right: 125px;
+    /* padding-top: 25px; */
 }
 
 #globe li {
   list-style-type: none;
+}
+
+.climatePopulation {
+  font-size:25px;
 }
 
 #film-data {
